--- a/SneakerDex/package.json
+++ b/SneakerDex/package.json
@@ -13,6 +13,8 @@
     "test:watch": "nwb test-react --server"
   },
   "dependencies": {
+    "pui-react-panels": "^7.3.1",
+    "pui-react-tile-layout": "^7.3.1",
     "react": "^15.4.1",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.1"
