--- a/SneakerDex/package.json
+++ b/SneakerDex/package.json
@@ -17,7 +17,8 @@
     "pui-react-tile-layout": "^7.3.1",
     "react": "^15.4.1",
     "react-bootstrap": "^0.30.7",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "react-favicon": "0.0.5"
   },
   "devDependencies": {
     "bootstrap": "^3.3.7",
