--- a/SneakerDex/package.json
+++ b/SneakerDex/package.json
@@ -18,7 +18,8 @@
     "react": "^15.4.1",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.1",
-    "react-favicon": "0.0.5"
+    "react-favicon": "0.0.5",
+    "react-toolbox": "^1.3.3"
   },
   "devDependencies": {
     "bootstrap": "^3.3.7",
