--- a/SneakerDex/package.json
+++ b/SneakerDex/package.json
@@ -20,15 +20,13 @@
     "react-addons-css-transition-group": "^15.4.1",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.1",
-    "react-favicon": "0.0.5",
-    "react-toolbox": "^1.3.3"
+    "react-favicon": "0.0.5"
   },
   "devDependencies": {
     "bootstrap": "^3.3.7",
     "nwb": "0.13.x",
     "nwb-sass": "^0.6.0",
-    "react-bootstrap": "^0.30.7",
-    "toolbox-loader": "0.0.3"
+    "react-bootstrap": "^0.30.7"
   },
   "author": "",
   "license": "MIT",
